# ficus-agent

./: .gitignore  .influx.example.toml  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/models/: errors.rs  mod.rs  resources.rs
lib/src/resources/: cloud_functions.rs  mod.rs  virtual_machines.rs
local/: docker-compose.yaml
plugins/aws/: Cargo.toml
plugins/aws/src/: lib.rs
plugins/aws/src/connectors/: cloudwatch.rs  ec2.rs  mod.rs
plugins/aws/src/resources/: mod.rs  virtual_machines.rs
plugins/mock/src/: mock_data.rs
plugins/mock/src/resources/: virtual_machines.rs
providers/aws/: Cargo.toml
providers/aws/src/: lib.rs  utils.rs
providers/aws/src/connectors/: cloudwatch.rs  lambda.rs  mod.rs
providers/aws/src/resources/: cloud_functions.rs  mod.rs  virtual_machines.rs
providers/mock/: Cargo.toml
providers/mock/src/: lib.rs  mock_data.rs
providers/mock/src/resources/: virtual_machines.rs
src/: aggregator.rs  analyzer.rs  main.rs
src/analyzers/: analyzer.rs  cloud_function_analyzer.rs  mod.rs  virtual_machine_analyzer.rs
src/connectors/: influxdb.rs
