[package]
name = "ficus-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ficus-agent-lib = {path = "./lib"}
ficus-agent-mock = {path = "./providers/mock", optional = true}
ficus-agent-aws = {path = "./providers/aws", optional = true}
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
hocon = "0.9.0"
influxdb2 = "0.3"

[features]
default = ["mock", "aws"]
mock = ["dep:ficus-agent-mock"]
aws = ["dep:ficus-agent-aws"]
